# football_predictions

./: .gitignore  .gitingnore  Dockerfile  ReadMe.md  bot_session_20231210_210434.session  bot_session_20231210_210515.session  bot_session_20231210_210740.session  docker-compose.debug.yml  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  session_id.session  session_name.session  test.json  test.py  testdockerfile
app/: main.py  session_name.session
app/app/core/telegram/session/: bot_session.session
app/core/: telegram.py
app/core/llms/: llm_handler.py
app/core/telegram/: telegram.py
app/core/telegram/session/: bot_session.session
app/decorators/: custom_decorators.py
app/dependencies/: authentication.py
app/football_sdk/: api_client.py  models.py  screenshot.py
app/football_sdk/widget_html/: widget.html
app/helpers/: background_task.py
app/redis/: redis_connector.py
app/redis_client/: redis.conf  redis_connector.py
redis_data/: appendonly.aof
redisinsight_data/: redisinsight.db
session/: bot_session.session
src/core/telegram/session/: bot_session.session
src/football_sdk/: api_client.py
src/helpers/: background_task.py
src/redis_client/: redis_connector.py
